--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: cpp
-compiler: gcc
-dist: trusty
+compiler:
+  - g++
 
-before_install:
-  # C++17
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-
-install: 
-  # C++17
-  - sudo apt-get install -qq g++-6
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
-
-script: 
-  - g++ main.cpp -std=c++17 -o travis_gcc_cpp17
-  - ./travis_gcc_cpp17
+script:
+  cd Dynamic Programming
+  make
+  make test
+  cd Searching
+  make
+  make test
+  cd Sorting
+  make
+  make test
+  cd String Matching
+  make
+  make test
