--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,12 @@ script:
   cd Dynamic\ Programming
   make
   make test
+  cd Sorting
+  make
+  make test
+  cd Searching
+  make
+  make test
+  cd String\ Matching
+  make
+  make test
